--- a/app/templates/_main.html
+++ b/app/templates/_main.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-        <!-- FontAwesome CSS -->
-        <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 
@@ -25,91 +23,17 @@
                 <h1 class="navbar-brand mb-0">TRAINING APP</h1>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('category.get_all_categories') }}">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        {% if view == 'get_course_by_id' %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('course.get_courses_by_categoryID', category_id=category.id) }}">Back <span class="sr-only">(current)</span></a>
-                        </li>
-                        {% endif %}
-                    </ul>
-                    
-                    {% if 'username' not in login_session %}
-                    <div id="notLoggedIn">
-                        <a class="btn btn-success" href="{{ url_for('auth.show_login')}}">Click to Sign In</a>
-                    </div>
-                    {% else %}
+                    {% if 'username' in login_session %}
                     <div id="loggedIn">
                         <a class="btn btn-success" href="{{ url_for('auth.gdisconnect')}}">Log Out</a>
                     </div>
                     {% endif %}
                 </div>
             </nav>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    {% if category == 'error' %}
-                    <div class="alert alert-danger" role="alert">
-                        {{ message }}
-                    </div>
-                    {% else %}
-                    <div class="alert alert-success" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endif %}   
-                {% endfor %}
-            {% endif %}
-            {% endwith %}
 
             {% block content %}
                 {% if view == 'login' %}
                     {% include 'auth/login.html' %}
-                {% endif %}
-
-                {% if view == 'public_get_all_categories' %}
-                    {% include 'public/get_all_categories.html' %}
-                {% endif %}
-
-                {% if view == 'get_all_categories' %}
-                    {% include 'category/get_all_categories.html' %}
-                {% endif %}
-
-                {% if view == 'new_category' %}
-                    {% include 'category/new_category.html' %}
-                {% endif %}
-                
-                {% if view == 'edit_category' %}
-                    {% include 'category/edit_category.html' %}
-                {% endif %}
-
-                {% if view == 'delete_category' %}
-                    {% include 'category/delete_category.html' %}
-                {% endif %}
-
-                {% if view == 'public_get_courses_by_categoryID' %}
-                    {% include 'public/get_courses_by_categoryID.html' %}
-                {% endif %}
-
-                {% if view == 'get_courses_by_categoryID' %}
-                    {% include 'course/get_courses_by_categoryID.html' %}
-                {% endif %}
-
-                {% if view == 'new_course' %}
-                    {% include 'course/new_course.html' %}
-                {% endif %}
-
-                {% if view == 'edit_course' %}
-                    {% include 'course/edit_course.html' %}
-                {% endif %}
-
-                {% if view == 'delete_course' %}
-                    {% include 'course/delete_course.html' %}
-                {% endif %}
-
-                {% if view == 'get_course_by_id' %}
-                    {% include 'course/get_course_by_id.html' %}
                 {% endif %}
             {% endblock %}
         </div>
