add HTTP status code

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,6 +25,7 @@
         <script>
         function signInCallback(authResult) {
             if (authResult['code']) {
+                console.log(authResult['code'])
                 //Hide the sign-in button as user is authorized
                 $('#signinButton').attr('style','display: none');
 
